<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/white"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/Colapsing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bannerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"

                android:orientation="horizontal">

            </androidx.recyclerview.widget.RecyclerView>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_collapseMode="pin">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/autoText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:text="@string/Moscow"
                        android:textColor="#000000"
                        android:textSize="12sp"
                        tools:ignore="LabelFor,TouchTargetSizeCheck">

                    </AutoCompleteTextView>

                </com.google.android.material.textfield.TextInputLayout>


            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <HorizontalScrollView
            android:id="@+id/hs"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"

                    android:orientation="horizontal"
                    tools:ignore="UselessParent">


                    <RadioButton
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="5dp"

                        android:layout_marginTop="7dp"
                        android:background="@drawable/radio_selector"
                        android:button="@android:color/transparent"
                        android:elevation="4dp"
                        android:padding="4dp"
                        android:text="@string/пицца"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="#DD2C00"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        tools:ignore="SmallSp,TouchTargetSizeCheck">

                    </RadioButton>

                    <RadioButton
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="7dp"
                        android:background="@drawable/radio_selector"
                        android:button="@android:color/transparent"
                        android:elevation="4dp"
                        android:padding="4dp"
                        android:text="@string/combo"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="#DD2C00"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        tools:ignore="TouchTargetSizeCheck,TextContrastCheck,TextContrastCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck">

                    </RadioButton>

                    <RadioButton
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="7dp"
                        android:background="@drawable/radio_selector"
                        android:button="@android:color/transparent"
                        android:elevation="4dp"
                        android:padding="4dp"
                        android:text="@string/desert"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="#DD2C00"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        tools:ignore="TouchTargetSizeCheck">

                    </RadioButton>

                    <RadioButton
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="7dp"
                        android:background="@drawable/radio_selector"
                        android:button="@android:color/transparent"
                        android:elevation="4dp"
                        android:padding="4dp"
                        android:text="@string/drink"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="#DD2C00"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        tools:ignore="TouchTargetSizeCheck">

                    </RadioButton>

                </RadioGroup>


            </LinearLayout>
        </HorizontalScrollView>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/menu_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"

        android:background="#FFFFFF"
        app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
        app:menu="@menu/items" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>